# mpmt-board-midas

./: .gitignore  .gitmodules  README.md
analyzer/: Makefile  TAnaManager.cpp  TAnaManager.h  TRawHistogram.cpp  TRawHistogram.h  TTotHistogram.cpp  TTotHistogram.h  ana.cpp  run_analyzer.sh
custom/: ControlPanel.html  mpmt.js
ddma-producer/: Makefile
ddma-producer/include/: libudmabuf.h
ddma-producer/src/: libudmabuf.cpp
frontend/: Makefile  README.md  mpmtevent.cpp  mpmtevent.h  mpmtfe.cpp  socketmonitor.h
hv/: README.md  conf.py  hvfe.py
producer/: CMakeLists.txt  Makefile  README.md
producer/include/: libudmabuf.h
producer/libdma/include/: dmabuffer.h  dmactrl.h
producer/libdma/src/: dmabuffer.cpp  dmactrl.cpp
producer/src/: evproducer-mt.cpp  evproducer.cpp  libudmabuf.cpp
rc/: README.md  conf-v1.py  conf-v2.py  conf.py  rcfe.py
script/: setup-udmabuf.sh
sn/: README.md  requirements.txt  snfe.py
spikes/: file_reader.py  pub.py  run00407sub0000.mid.lz4  run00410sub0000.mid.lz4  slow-router.py
supervisor/: README.md  midas-mhttpd.conf  midas-mserver.conf  mpmt-hv.conf  mpmt-producer.conf  mpmt-rc.conf  mpmt-sn.conf
ts/: tsd.py
